DTOs' refactoring